# schemaglow

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  pyproject.toml  release.sh  requirement.txt
.github/workflows/: ci.yml  pypi_publish.yml
skills/: 00_MAIN_SKILLS_GUIDE.md  CITATION.cff  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  FEATURES.md  README.md  README_MAINTENANCE_CONTRACT.md  REQUIREMENTS.md  SECURITY.md  SKILL.md  github_workflow_ci.yml  github_workflow_pypi_publish.yml  gitignore.txt  pre-commit-config.yaml  pyproject.toml  release.sh  requirements.txt
src/schemaglow/: __init__.py  cli.py  diffing.py  infer.py  models.py  renderers.py  schema_sources.py  service.py
tests/fixtures/downloaded/: SOURCES.md
tests/fixtures/manual/avro/: user-candidate.avsc
tests/fixtures/manual/csv/: weather-candidate.csv
tests/fixtures/manual/json/: miserables-baseline.json  miserables-candidate.json
tests/fixtures/manual/jsonl/: search-baseline.jsonl  search-candidate.jsonl
tests/fixtures/manual/openapi/: petstore-candidate.yaml
tests/fixtures/manual/options/: ignore-new.jsonl  ignore-old.jsonl  rename-new.csv  rename-old.csv  strict-new.csv  strict-old.csv
tests/fixtures/manual/parquet/: alltypes-baseline.parquet  alltypes-candidate.parquet
tests/fixtures/manual/proto/: addressbook-candidate.proto
tests/fixtures/manual/scan/old/: weather.csv
tests/integration/: test_cli.py  test_sample_fixtures.py
tests/unit/: test_infer_and_diff.py  test_options_and_edge_cases.py  test_renderers_and_service.py  test_schema_sources.py
